--- a/style.css
+++ b/style.css
@@ -235,3 +235,9 @@ li:hover ~ li#chosen{
 button.slideButton#right{
     transform: translate(100%);
 }
+model-viewer{
+    width: 100%;
+    height: 600px;
+    background-color: black;
+
+}
